src-errormsg/E26-AmbiguousType/Plinth.err

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E26-AmbiguousType/Plinth.hs:12:15: error: [GHC-83865]
    • Couldn't match expected type ‘Integer’
                  with actual type ‘BuiltinData’
    • In the expression: toBuiltinData (unsafeFromBuiltinData d)
      In an equation for ‘roundtrip’:
          roundtrip d = toBuiltinData (unsafeFromBuiltinData d)
   |
12 | roundtrip d = toBuiltinData (unsafeFromBuiltinData d)
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
